--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -18,5 +19,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/images/pashu.png
-  - assets/images/agroconnect_text.png
+  - assets/images/
