--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,3 +20,4 @@ flutter:
   assets:
   - assets/images/pashu.png
   - assets/images/agroconnect_text.png
+  - assets/images/(Upload your agricultural identity card in pdf format).png
