--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_otp_text_field: ^1.1.1
+  snippet_coder_utils: ^1.0.14
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -22,4 +25,4 @@ flutter:
   - assets/images/pashu.png
   - assets/images/agroconnect_text.png
   - assets/images/(Upload your agricultural identity card in pdf format).png
-  - assets/images/
+  - assets/images/Add the following (Optional)_ Subject, address, phone number..png
