--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   flutter_otp_text_field: ^1.1.1
   snippet_coder_utils: ^1.0.14
+  url_launcher: ^6.1.11
+  http: ^0.13.4
+  mongo_dart: ^0.9.1
 
   
 
@@ -22,7 +25,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/images/pashu.png
-  - assets/images/agroconnect_text.png
-  - assets/images/(Upload your agricultural identity card in pdf format).png
-  - assets/images/Add the following (Optional)_ Subject, address, phone number..png
+  - assets/images/
+   
