--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   flutter_otp_text_field: ^1.1.1
+  http: ^1.0.0
+  mongo_dart: ^0.9.1
   snippet_coder_utils: ^1.0.14
   url_launcher: ^6.1.11
 
@@ -21,7 +24,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - assets/images/pashu.png
-  - assets/images/agroconnect_text.png
-  - assets/images/(Upload your agricultural identity card in pdf format).png
-  - assets/images/Add the following (Optional)_ Subject, address, phone number..png
+  - assets/images/
