add get weather,installed morgan

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "fast-two-sms": "^2.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
 }
