--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,16 @@
   "name": "agroconnect",
   "version": "1.0.0",
   "description": "android application to aid farmers",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon main",
-    "start": "node main.js"
+    "dev": "nodemon",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
@@ -26,6 +25,7 @@
     "express-fileupload": "^1.4.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.6.0",
+    "bcryptjs": "^2.4.3",
     "firebase": "^9.22.1",
     "helmet": "^6.0.0",
     "http-status-codes": "^2.2.0",
@@ -42,11 +42,6 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.8"
+    "nodemon": "^2.0.22"
   }
 }
