--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,15 @@ environment:
 
 dependencies:
   dio: ^5.2.1+1
+  file_picker: ^5.3.2
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_otp_text_field: ^1.1.1
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
   http: ^1.0.0
+  intl: ^0.18.1
   mongo_dart: ^0.9.1
   snippet_coder_utils: ^1.0.14
   url_launcher: ^6.1.11
